[package]
name = "librarycat"
version = "0.1.0"
edition = "2021"
authors = ["Audrey Paige"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contractions = "0.5.4"
csv = "1.3.0"
encoding = "0.2.33"
epub = "1.2.2"
keyword_extraction = "1.3.0"
natural = "0.3.0"
pdf-extract = "0.7.4"
rand = "0.8.5"
regex = "1"
serde = "1.0.197"
serde_json = "1.0"
stop-words = "0.8.0"
streaming-stats = "0.1.28"
unicode-segmentation = "1.9.0"

